--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,30 @@
-.App {
-  text-align: center;
+* {
+  display: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+*:before, *:after {
+  display: inherit;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#root {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
 }
 
-.App-intro {
-  font-size: large;
+header {
+  height: 50px;
+  background-color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+main {
+  background-color: steelblue;
+  min-height: calc(100vh - 100px);
+}
+
+footer {
+  background-color: #fff;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
 }
