convert data to propert format

--- a/src/Main.css
+++ b/src/Main.css
@@ -4,6 +4,7 @@ main {
   min-height: calc(100vh - 100px);
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
