--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,12 @@
   min-height: 100vh;
   background-color: #000;
 }
+
+main {
+  min-height: calc(100vh - 100px);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
