Make container for sun to move in

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -9,7 +9,10 @@
 #root {
   width: 100%;
   min-height: 100vh;
-  background-color: #000;
+  background-color: skyblue;
+  position: relative;
+
+  overflow: hidden;
 }
 
 main {
