Add default loading bg

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -9,7 +9,7 @@
 #root {
   width: 100%;
   min-height: 100vh;
-  background-color: skyblue;
+  background-color: black;
   position: relative;
 
   overflow: hidden;
