--- a/client/src/components/Sun.css
+++ b/client/src/components/Sun.css
@@ -1,6 +1,26 @@
-.sun {
+.sun, .night, .dusk, .day {
   width: 100%;
   position: absolute;
   bottom: 0;
   z-index: 0;
+}
+
+.night, .dusk, .day {
+  height: 100%;
+}
+
+.dusk {
+  background: linear-gradient(
+    to top,
+    rgb(102, 79, 119),
+    rgb(45, 67, 101) 30%,
+    rgb(48, 69, 86) 70%
+  )
+}
+
+.night {
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(/img/stars.png),
+    linear-gradient(#000, #000)
 }
