--- a/client/src/components/Clock.css
+++ b/client/src/components/Clock.css
@@ -4,3 +4,43 @@
   z-index: 5;
   text-align: center;
 }
+
+.time-display h6, .time-display h1 {
+  margin: 0;
+}
+
+.time-display h6 {
+  line-height: 1.5;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: 'Raleway', sans-serif
+}
+
+.time-display h1 {
+  line-height: 2;
+  font-family: 'PT Sans Caption', sans-serif;
+  font-size: 48px;
+}
+
+@media (min-width: 500px) {
+  .time-display h1 {
+    font-size: 60px;
+  }
+}
+
+@media (min-width: 700px) {
+  .time-display h1 {
+    font-size: 80px;
+  }
+}
+
+@media (min-width: 900px) {
+  .time-display h1 {
+    font-size: 110px;
+    line-height: 1.5;
+  }
+
+  .time-display h6 {
+    font-size: 28px;
+  }
+}
