--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -2,6 +2,7 @@ footer {
   height: 30px;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -13,8 +14,9 @@ footer {
 
 footer h6 {
   font-size: 8px;
-  font-weight: bolder;
-  text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1);
+  font-weight: 200;
+  font-family: 'Raleway', sans-serif;
+  text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.8);
 }
 
 footer h6 a {
