--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -11,9 +11,14 @@ header {
 #gh-icon {
   width: 32px;
   height: 32px;
-
+  opacity: 0.7;
+  transition: opacity 0.3s linear;
 }
 
 #gh-icon path {
   fill: #fff;
+}
+
+#gh-icon:hover {
+  opacity: 1;
 }
