--- a/client/src/components/Sun.css
+++ b/client/src/components/Sun.css
@@ -22,6 +22,6 @@
 .night {
   background:
     linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url(/img/stars.png),
+    url(../img/stars.png),
     linear-gradient(#000, #000)
 }
